--- a/src/MainPage/MainPage.css
+++ b/src/MainPage/MainPage.css
@@ -1,24 +1,41 @@
 .RowStyle {
-  align-items: center;
-  justify-content: center;
+  align-items: start;
+  justify-content: start;
+  column-gap: 30px;
 }
 
-.CardStyle {
+/**
+
+.CardStyle{
   margin-bottom: 25px;
-  width: 320px;
-  height: 380px;
-}
+  width: 400px;
+  height: 450px;
+  /**
+  Cardstyle in mainpage.css
+    margin-bottom: 25px;
+width: 400px;
+height: 450px;
 
-.imageStyle {
+
+  
+}
+*/
+
+
+
+  /**
+  
+
+      max-height: 250px;
+  max-width: 250px;
+  object-fit: cover;
+   
   width: 100%;
   height: 15vw;
-  object-fit: cover;
-  /**
-    
-    height: auto;
-    max-height: 250px;
-    width: auto;
-    max-width: 250px;
-    object-fit: cover;
+  object-fit: cover; 
+
+
+    width: 100%;
+  height: 70%;
+  object-fit: cover; 
     */
-}
