--- a/src/components/FoodCard.css
+++ b/src/components/FoodCard.css
@@ -1,19 +1,66 @@
-.CardStyle{
-    margin-bottom: 25px;
-    width: 320px;
-    height: 380px;
+
+.footerWidth{
+    width:100px;
     
 }
+.textStyle{
+    float: right;
+    font-family:Futura;
+    font-size: x-large;
+}
+
+.starStyle{
+    width :30%;
+    height:30%;
+  
+}
+
+.foodTagStyle{
+  float:right;
+  font-size: 10px; 
+  padding: 5px;
+}
+
+.CardStyle{
+     margin: 10px;
+    width: 400px;
+    height: 450px;
+    border-radius:40px;
+    overflow: hidden
+
+    /**
+    Cardstyle in mainpage.css
+      margin-bottom: 25px;
+  width: 400px;
+  height: 450px;
+  
+    */
+    
+  }
 .imageStyle{
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
+  width: 100%;
+  height: 70%;
+  object-fit: cover; 
+  }
+
+  
+
+   
+
     /**
     
-    height: auto;
-    max-height: 250px;
+    height: auto; 15vw; 
+    max-height: 250px; 
     width: auto;
     max-width: 250px;
     object-fit: cover;
+
+    
+    width = 320px
+    height = 300px
+    
+     width: 100%;
+    height: 70%;
+    object-fit: cover; 
+
     */
-}
