--- a/src/components/FoodCard.css
+++ b/src/components/FoodCard.css
@@ -4,11 +4,19 @@
   height: 450px;
   border-radius: 40px;
   overflow: hidden;
+
 }
+.CardStyle:hover{
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+
+
 .textStyle {
   float: right;
   font-family: Futura;
-  font-size: x-large;
+  font-size: large;
 }
 
 .starStyle {
@@ -22,21 +30,24 @@
   padding: 5px;
 }
 
-/**
-    Cardstyle in mainpage.css
-      margin-bottom: 25px;
-  width: 400px;
-  height: 450px;
-  
-    */
+.titleStyle{
+  font-weight: bold;
+  font-size: 15px;
+  font-family: Futura;
+}
 
+.paragraphStyle{
+  margin-bottom: 2px;
+}
 .imageStyle {
   width: 100%;
   height: 70%;
-  object-fit: cover;
+  object-fit: scale-down;
 }
 
 .addressStyle {
   color: black;
   text-decoration: none;
+  font-family: Futura;
+  font-size: 13px;
 }
